Added Create Class Form

--- a/app/views/instructor.jade
+++ b/app/views/instructor.jade
@@ -1,4 +1,4 @@
-include ./layouts/header.jade
+include ./layouts/instr_header.jade
 div.container-fluid.page-wrap
   div.row
     div.col-md-10.col-md-offset-1
