--- a/app/views/signup.jade
+++ b/app/views/signup.jade
@@ -1,9 +1,9 @@
-include ./layouts/header.jade
+include ./layouts/instr_header.jade
 div.container-fluid.page-wrap
   div.row
     div.col-md-6.col-md-offset-3
       div.Signup-Form
-        h3.Title!= message
+        h3.Title Signup
         form(id="signup", name="signup", action="signup", method="post")
           input(
             type="text",
