--- a/app/views/layouts/instr_header.jade
+++ b/app/views/layouts/instr_header.jade
@@ -33,37 +33,8 @@ html
               li
                 a(href="/logout") Log out
             else
-              li.dropdown
-                a(href="#",
-                  data-toggle="dropdown",
-                  role="button",
-                  aria-haspopup="true",
-                  aria-expanded="false"
-                ).dropdown-toggle Sign in
-                  span.caret
-                form(
-                  name="signin",
-                  action="signin",
-                  method="post"
-                ).dropdown-menu.signin-form
-                  input(
-                    type="email",
-                    name="email",
-                    placeholder="Email address"
-                  ).form-control
-                  input(
-                    type="password",
-                    name="password",
-                    placeholder="Password"
-                  ).form-control
-                  input(
-                    type="submit",
-                    value="Sign in",
-                    class="btn btn-primary"
-                  )
-                
               li
-                a(href="/signup") Sign Up
+                a(href="/createclass") Create Class
               
         if (flashMessage && flashMessage.length)
           div.row
