--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -5,6 +5,31 @@ div.container-fluid.page-wrap
       h1.Title.text-center!= message
       div.row
         div.col-md-6.col-md-offset-3.text-center
-          p Here is where you can start putting content for your application.
+          p Here is where you can start putting content for your application. Woot
+          div
+          table
+            thead
+              tr.head
+                th Program Type
+                th Term
+                th Price
+                th Name 
+                th Program Id
+            tbody
+              each row, i in rows
+                tr
+                  td
+                    =row.programType
+                  td
+                    =row.term
+                  td
+                    =row.price
+                  td
+                    =row.name
+                  td
+                    =row.programId
+          
+          
+            
               
 include ./layouts/footer.jade
