--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -1,4 +1,9 @@
 include ./layouts/header.jade
+
+style.
+  table, th, td {
+  border: 1px solid black;}
+
 div.container-fluid.page-wrap
   div.row
     div.col-md-10.col-md-offset-1
@@ -6,10 +11,11 @@ div.container-fluid.page-wrap
       div.row
         div.col-md-6.col-md-offset-3.text-center
           p Here is where you can start putting content for your application. Woot
-          div
-          table
+          | <br>
+          p Programs
+          table 
             thead
-              tr.head
+              tr
                 th Program Type
                 th Term
                 th Price
@@ -28,8 +34,24 @@ div.container-fluid.page-wrap
                     =row.name
                   td
                     =row.programId
-          
-          
-            
-              
+          | <br>
+          p Users
+          table 
+            thead
+              tr
+                th Name
+                th Email
+                th User Id
+            tbody
+              each user, i in users
+                tr
+                  td
+                    =user.name
+                  td
+                    =user.email
+                  td
+                    =user.userId
+
+                    
+                          
 include ./layouts/footer.jade
