Display Data in Instructor Dashboard

--- a/app/views/createclass.jade
+++ b/app/views/createclass.jade
@@ -12,6 +12,11 @@ div.container-fluid.page-wrap
           ).form-control
           input(
             type="text",
+            name="term",
+            placeholder="Term"
+          ).form-control
+          input(
+            type="text",
             name="location",
             placeholder="Location"
           ).form-control
