--- a/app/views/layouts/instr_header.jade
+++ b/app/views/layouts/instr_header.jade
@@ -35,6 +35,8 @@ html
             else
               li
                 a(href="/createclass") Create Class
+              li
+                a(href="/editclass") Edit Class
               
         if (flashMessage && flashMessage.length)
           div.row
