--- a/app/views/signup.jade
+++ b/app/views/signup.jade
@@ -1,4 +1,4 @@
-include ./layouts/instr_header.jade
+include ./layouts/header.jade
 div.container-fluid.page-wrap
   div.row
     div.col-md-6.col-md-offset-3
