--- a/app/views/layouts/footer.jade
+++ b/app/views/layouts/footer.jade
@@ -2,7 +2,7 @@ footer
   div.container-fluid
     div.row
       div.col-md-6.col-md-offset-3
-        div.text-center Footer content can go here.
+        div.text-center &copy; REC-team, Inc. 2016
 
 
   script(src="/js/lib/jquery.min.js")
