--- a/app/views/signup.jade
+++ b/app/views/signup.jade
@@ -3,27 +3,64 @@ div.container-fluid.page-wrap
   div.row
     div.col-md-6.col-md-offset-3
       div.Signup-Form
-        h3.Title Signup
-        form(id="signup", name="signup", action="signup", method="post")
-          input(
-            type="text",
-            name="username",
-            placeholder="Username"
-          ).form-control
-          input(
-            type="email",
-            name="email",
-            placeholder="Email address"
-          ).form-control
-          input(
-            type="password",
-            name="password",
-            placeholder="Password"
-          ).form-control
-          input(
-            type="submit",
-            class="btn btn-primary form-control",
-            value="Sign up"
-          )
-          
+        form.form-horizontal(id="signup", name="signup", action="signup", method="post")
+          fieldset
+            // Form Name
+            legend UBC Rec Sign Up
+            // Text input
+            .form-group
+              label.col-md-4.control-label(for='name') Your Name
+              .col-md-5
+                input#name.form-control.input-md(name='name', type='text', placeholder='Jane Doe', required='')
+            // Text input
+            .form-group
+              label.col-md-4.control-label(for='email') Your Email
+              .col-md-5
+                input#email.form-control.input-md(name='email', type='email', placeholder='jane@example.com', required='')
+            // Password input
+            .form-group
+              label.col-md-4.control-label(for='password') Password
+              .col-md-5
+                input#password.form-control.input-md(name='password', type='password', placeholder='', required='')
+            // Multiple Radios
+            .form-group
+              label.col-md-4.control-label(for='isUBC') Are you a UBC Faculty Member or Student?
+              .col-md-4
+                .radio
+                  label(for='radios-0')
+                    input#radios-0(type='radio', name='isUBC', value='true', checked='checked')
+                    |       Yes
+                .radio
+                  label(for='radios-1')
+                    input#radios-1(type='radio', name='isUBC', value='false')
+                    |       No
+            // Multiple Radios
+            .form-group
+              label.col-md-4.control-label(for='isInstructor') Are you an Instructor?
+              .col-md-4
+                .radio
+                  label(for='isInstructor-0')
+                    input#isInstructor-0(type='radio', name='isInstructor', value='true')
+                    |       Yes
+                .radio
+                  label(for='isInstructor-1')
+                    input#isInstructor-1(type='radio', name='isInstructor', value='false', checked="checked")
+                    |       No
+            // Text input
+            .form-group
+              label.col-md-4.control-label(for='creditcard') Credit Card Number
+              .col-md-6
+                input#creditcard.form-control.input-md(name='creditcard', type='number', placeholder='placeholder')
+            // Text input
+            .form-group
+              label.col-md-4.control-label(for='expiryDate') Credit Card Expiry Date
+              .col-md-4
+                input#expiryDate.form-control.input-md(name='expiryDate', type='date', placeholder='04/05/2017')
+            // Button
+            .form-group
+              label.col-md-4.control-label(for='submit')
+              .col-md-4
+                button#submit.btn.btn-primary(name='submit', type='submit') Sign Up
+
+
 include ./layouts/footer.jade
