finished program views. fixed up some other ui stuff

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -33,7 +33,7 @@ div.container-fluid.page-wrap
                   td
                     =row.name
                   td
-                    =row.programId
+                    a(href="../programs/#{row.programId}")= row.programId
           | <br>
           p Users
           table 
