--- a/app/views/programs.jade
+++ b/app/views/programs.jade
@@ -38,7 +38,7 @@ div.container-fluid.page-wrap
                 th Location
                 th Address
                 th Teacher
-                th # of students
+                th # of Enrolled
             tbody
                 tr
                   td #{occurs.startTime}
