--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,6 +8,11 @@ div.container-fluid.page-wrap
       h1.Title.text-center Get REC-ed
       div.row
         div.col-md-6.col-md-offset-3.text-center
-          p Here is where you can start putting content for your application.
+          p CPSC 304 Project - A Simplified UBC Recreational System
           div(style='background-image: url(/views/background.jpg;')
-   include ./layouts/footer.jade
+
+        div.col-md-6.col-md-offset-3
+          <br>
+          
+
+include ./layouts/footer.jade
