--- a/app/views/avg.jade
+++ b/app/views/avg.jade
@@ -7,7 +7,7 @@ style.
 div.container-fluid.page-wrap
   div.row
     div.col-md-10.col-md-offset-1
-      h1.Title.text-center #{message}
+      h1.Title.text-center #{message} By Program Type
       div.row
         div.col-md-8.col-md-offset-2.text-center
           | <br>
@@ -15,7 +15,7 @@ div.container-fluid.page-wrap
             thead
               tr
                 th Class Type
-                th Avg Price
+                th Average #{message}
             tbody
               each row, i in rows
                 tr
