--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -1,8 +1,6 @@
 include ./layouts/header.jade
 
-style.
-  table, th, td {
-  border: 1px solid black;}
+
 
 div.container-fluid.page-wrap
   div.row
@@ -10,17 +8,16 @@ div.container-fluid.page-wrap
       h1.Title.text-center!= message
       div.row
         div.col-md-6.col-md-offset-3.text-center
-          p Here is where you can start putting content for your application. Woot
-          | <br>
-          p Programs
-          table 
+        div.col-md-6.col-md-offset-3
+          h4 Programs
+          table.table-striped.table-bordered
             thead
               tr
-                th Program Type
-                th Term
-                th Price
-                th Name 
-                th Program Id
+                th Program Type &nbsp
+                th Term &nbsp
+                th Price &nbsp
+                th Name &nbsp
+                th Program Id &nbsp
             tbody
               each row, i in rows
                 tr
@@ -35,13 +32,13 @@ div.container-fluid.page-wrap
                   td
                     a(href="../programs/#{row.programId}")= row.programId
           | <br>
-          p Users
-          table 
+          h4 Users
+          table.table-striped.table-bordered
             thead
               tr
-                th Name
-                th Email
-                th User Id
+                th Name &nbsp
+                th Email &nbsp
+                th User Id &nbsp
             tbody
               each user, i in users
                 tr
