--- a/app/views/expensive.jade
+++ b/app/views/expensive.jade
@@ -7,18 +7,19 @@ style.
 div.container-fluid.page-wrap
   div.row
     div.col-md-10.col-md-offset-1
-      h1.Title.text-center #{message}
+      //h1.Title.text-center #{message}
       div.row
-        div.col-md-6.col-md-offset-3.text-center
+        div
           | <br>
-          table 
+          table.table-striped.table-bordered
             thead
+            h4 #{message}
               tr
-                th Program Type
-                th Term
-                th Price
-                th Name 
-                th Program Id
+                th Program Type &nbsp
+                th Term &nbsp
+                th Price &nbsp
+                th Name  &nbsp
+                th Program Id &nbsp
             tbody
               each row, i in programs
                 tr
@@ -33,8 +34,6 @@ div.container-fluid.page-wrap
                   td
                     a(href="../programs/#{row.programId}")= row.programId
           | <br>
-          a(href="../expensive/most") Most Expensive Programs <br>
-          a(href="../expensive/least") Least Expensive Programs
           | <br>
                     
                           
