--- a/app/views/admin.jade
+++ b/app/views/admin.jade
@@ -33,9 +33,10 @@ div.container-fluid.page-wrap
                 td
                   = row.term
                 td  <form method="post" action="/adminDropProgram"><button type="submit" name="submit" value="#{row.programId}">Drop</button></form>
+                td <form method="get" action="/editprogram/#{row.programId}"><button type="submit">Edit</button></form>
             <form method="post" action="/adminAddProgram">
             tr
-              td <input type="text" name="name">
+              td <input type="text" name="name" value="Hello" readonly>
               td <input type="text" name="programType">
               td <input type="text" name="programId">
               td <input type="text" name="price">
