--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -12,7 +12,8 @@ div.container-fluid.page-wrap
           div(style='background-image: url(/views/background.jpg;')
 
         div.col-md-6.col-md-offset-3
-          <br>
+          | <br> 
+          | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="drop" value=input>Go</button></form>
           
 
 include ./layouts/footer.jade
