--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,7 +9,7 @@ div.container-fluid.page-wrap
       div.row
         div.col-md-6.col-md-offset-3.text-center
           p CPSC 304 Project - A Simplified UBC Recreational System
-
+          body.backgroundimg
         div.col-md-6.col-md-offset-3
           | <br> 
           | <form method="post">Enter Your User ID <input type ="number" name="number"><button name="drop" value=input>Go</button></form>
